@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.015" hostname="unknown" timestamp="2015-03-03T18:08:41">
+<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.02" hostname="unknown" timestamp="2015-03-27T13:16:22">
   <properties/>
   <testcase classname="test_errorfail_output" name="test_success">
     <error><![CDATA[Error in tear_down fixture:
