@@ -47,6 +47,7 @@ mlUnit development snapshot
     fixture and mlunit_param reversion
   - Fix: Invalid jUnit XML from hapless MATLAB error message [B#20]
   - Fix: jUnit XML indentation sometimes applied to mid-line tags
+  - Fix: printable() breaks on MATLAB or Java objects, and function handles
 
   [B#20] https://sourceforge.net/p/mlunit/bugs/20/
 
